# R-Type

./: .gitignore  CMakeLists.txt  build_and_run.sh  raylib.cpp
Engine/: CMakeLists.txt  GraphicalLibrary.hpp
Engine/Audio/: Audio.cpp  Audio.hpp
Engine/Core/: Core.cpp  Core.hpp
Engine/ECS/: CollisionSystem.cpp  CollisionSystem.hpp  ComponentArray.hpp  ComponentManager.hpp  Ecs.hpp  EngineCollisionSystem.cpp  EngineCollisionSystem.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp
Engine/Graphics/: Audio.cpp  Audio.hpp  Input.cpp  Input.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
Engine/Input/: Input.cpp  Input.hpp
Game/: CMakeLists.txt  IGame.hpp  RTypeGamePlugin.cpp  main.cpp  r-type_client.cpp  r-type_server.cpp  snake_client.cpp
Game/Components/: Components.hpp
Game/R-Type/include/Components/: ComponentAnimation.hpp  ComponentEnemy.hpp  ComponentHealth.hpp  ComponentScore.hpp
Game/R-Type/include/Systems/: SystemAnimation.hpp  SystemEnemy.hpp  SystemHealth.hpp  SystemScore.hpp
Game/RType/: RTypeGamePlugin.cpp  RTypeGamePlugin.hpp  RTypeTypes.hpp
Game/Snake/: SnakeGamePlugin.cpp  SnakeGamePlugin.hpp  SnakeTypes.hpp
Game/Systems/: NetworkSystem.cpp  NetworkSystem.hpp  Protocol.hpp  Systems.cpp  Systems.hpp
Network/: CMakeLists.txt  NetworkSystem.cpp  NetworkSystem.hpp  Protocol.hpp  r-type_server.cpp
Network/Protocol/: Protocol.hpp
Network/Server/: ClientHandler.cpp  ClientHandler.hpp  GameLoop.cpp  GameLoop.hpp  Globals.cpp  Globals.hpp  NetworkUtils.cpp  NetworkUtils.hpp  PluginLoader.cpp  PluginLoader.hpp  SocketUtils.cpp  SocketUtils.hpp
Network/System/: NetworkSystem.cpp  NetworkSystem.hpp
ecs/include/: EntityManager.hpp
ecs/include/Components/: ComponentArray.hpp  ComponentManager.hpp
ecs/include/Systems/: CollisionSystem.hpp  System.hpp  SystemManager.hpp
ecs/src/: ecs.cpp
sdl2/src/: SDL2.cpp
